Windows Certificate Store must be opened read-only

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • Platforms 2017-07-10, Platforms 2017-07-31
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      I'm not clear how to reproduce this, but a user of the PHP driver (which wraps mongoc) managed to get CertOpenStore() to fail when not providing CERT_STORE_READONLY_FLAG.

      It appears that certain user accounts need to declare their intent as read only?

            Assignee:
            Ted Tuckman (Inactive)
            Reporter:
            Hannes Magnusson (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: