SERVER-27592 open windows certificate store read only